# ChangeLog for sci-biology/discrover
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Feb 2015; Justin Lecher <jlec@gentoo.org> discrover-1.5.2.ebuild,
  discrover-9999.ebuild, metadata.xml:
  sci-biology/discrover: fix SLOT operators; correct ruby deps

*discrover-1.5.2 (27 Jan 2015)

  27 Jan 2015; Jonas Maaskola <jonas@maaskola.de> +discrover-1.5.2.ebuild,
  -discrover-1.4.1.ebuild, discrover-9999.ebuild, metadata.xml:
  sci-biology/discrover: bump package version, add USE flag for link-time
  optimization, install doc to /usr/share/doc/${PF}

*discrover-1.4.1 (05 Jan 2015)

  05 Jan 2015; Jonas Maaskola <jonas@maaskola.de> +discrover-1.4.1.ebuild,
  -discrover-1.4.0.ebuild:
  Bump patch version

*discrover-1.4.0 (04 Jan 2015)

  04 Jan 2015; Jonas Maaskola <jonas@maaskola.de> +discrover-1.4.0.ebuild,
  -discrover-1.3.1.ebuild, discrover-9999.ebuild, metadata.xml:
  Bump minor version to 1.4.0.  Introduces a new USE flag: 'cairo'.
  x11-libs/cairo is used to generate sequence logos.  The USE flag 'logo' has
  been renamed to 'tikzlogo'. The tikzlogo Ruby script served the purpose that
  is now fulfilled by the Cairo-based code. tikzlogo requires Ruby, ImageMagick,
  and a full TeX Live installation (including the large dev-texlive/texlive-
  latexextra). Compared to that, the new Cairo-based code has much reduced
  dependencies, and is hence the preferred way to generate sequence logos.

*discrover-1.3.1 (15 Dec 2014)

  15 Dec 2014; Jonas Maaskola <jonas@maaskola.de> +discrover-1.3.1.ebuild,
  -discrover-1.1.2.ebuild, discrover-9999.ebuild:
  sci-biology/discrover: version bump; add to RDEPEND  Bump ebuild for new
  release. When the USE flag "logo" is used, we also need to depend on texlive-
  latexextra for the standalone package.