@@ -1,1 +1,1 @@
-DIST discrover-1.5.2.tar.gz 257926 SHA256 047222c605b8e49096bb6d003a3aa1bea10fb489f990441c6d02804acd957d8b SHA512 31e8414f625dd3cfc2564145ffebdc0f69dad9cbe1c70034b874be04922b3867694ea5a525b8bff9823135527b7eed84ed3592a53705ba8f113d54f08c9f9438 WHIRLPOOL 76365fa0db51fe94186b8524e17a3a15c820dfe982af71c6ac02c649fc030b8d92b895ed600444235ba23887b422a9683e1ebeffddfb7c21fe9c471e958ded45
+DIST discrover-1.6.0.tar.gz 251285 SHA256 1399eb8249a712d331c24eeb8ef30f7cc7cc737a6a9bd6682d34834a944c5065 SHA512 78215b8c05da214928934b63f78753d707fbbe5de8cf7dbd03ddededfaf8cedf232b6769755718748735ff504e129ce02bdef3b29d0ece2b57e3745ab2e1669b WHIRLPOOL f2716730dd9310194170f78177d73ab2c856769cf04c54fa1493515c26454a1af5df2f15fa246aeeeaf7fc7b966da6d6f30a8f4ca7beeaa2e1e9b44aca73d2ea
