@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*discrover-1.6.0 (18 Mar 2015)
+
+  18 Mar 2015; Jonas Maaskola <jonas@maaskola.de> +discrover-1.6.0.ebuild,
+  -discrover-1.5.2.ebuild, discrover-9999.ebuild, metadata.xml:
+  sci-biology/discrover: version bump; drop USE flag
+
   18 Feb 2015; Justin Lecher <jlec@gentoo.org> discrover-1.5.2.ebuild,
   discrover-9999.ebuild, metadata.xml:
   sci-biology/discrover: fix SLOT operators; correct ruby deps
